# temp

./: 1.py  CMakeLists.txt  First Step.bat  README.md  Second Step(As Admin).bat  Untitled Diagram.drawio  airbag.py  ans.py  autorun.bat  get_center.py  main.cpp  main2.cpp  mysql_demo.cpp  one.py  redefine_ctrl_c.cpp  retancle.py  rng1.cpp  staitc_cast_func.cpp  try.py  two.py  u.py  未命名绘图2.drawio
CPP_C/: Makefile  circle_C.c  circle_C.h  circle_c.h.gch  main.cpp
CPP_C_min/: Makefile  circle_c.h.gch
C_CPP/: Makefile  circle.cpp  circle.h  circle.h.gch  circle_c.cpp  circle_c.h  circle_c.h.gch  main.cpp
C_CPP_min/: Makefile  main.c
base64_1/: CMakeLists.txt  base64.c  base64.h  main.c
headers-only-class/: test1.h  test2.cpp  test2.h
mysql_c/: connect.c
pd project/: 工作簿1.xlsx
python_gcc/: build.bat  main.cpp  test.py  test_class.h  test_class.pyd  test_class_wrapper.cpp
qt/: main.cpp  mainwindow.cpp  mainwindow.h
qt/testForCV/: image.qrc  ui_widget.h  widget.cpp  widget.h  widget.ui
testForCV/: testForCV.pro  testForCV.pro.user.36da4a4  ui_widget.h  widget.cpp  widget.h
